# battery_limiter

./: Cargo.toml  README.md  askama.toml  justfile
src/: args.rs  battery_level.rs  lib.rs  main.rs  service.rs
styles/: style.css
templates/: battery_limiter.service
