[package]
name = "battery_limiter"
version = "0.1.0"
edition = "2021"

[dependencies]
argh = "0.1.12"
askama = "0.12.1"
async-channel = "2.3.1"
async-fs = "2.1.2"
async-process = "2.3.0"
futures-lite = "2.5.0"
gtk = { version = "0.9.2", package = "gtk4", features = ["v4_12"] }
libadwaita = { version = "0.7.1", features = ["v1_5"] }
